--- a/Sparc.Blossom.Server/Pages/BlogPost.razor
+++ b/Sparc.Blossom.Server/Pages/BlogPost.razor
@@ -1,4 +1,4 @@
-﻿<article class="blog-post ibis-ignore">
+﻿@*<article class="blog-post ibis-ignore">
     <header>
         @if (Post["title"] != null)
         {
@@ -40,3 +40,4 @@
 @code {
     [Parameter] public IbisContent Post { get; set; } = null!;
 }
+*@
