--- a/Sparc.Blossom.Server/Pages/Blogs.razor
+++ b/Sparc.Blossom.Server/Pages/Blogs.razor
@@ -1,6 +1,4 @@
-﻿@page "/blogs/{ChannelId}"
-
-<div class="blog-list">
+﻿<div class="blog-list">
     <div class="background"><img src="images//Pattern_1.png" alt="" /></div>
     <div class="container">
         <header>
