--- a/Sparc.Blossom.Server/Pages/_Host.cshtml
+++ b/Sparc.Blossom.Server/Pages/_Host.cshtml
@@ -22,7 +22,7 @@
 </head>
 <body>
     <app>
-        <component type="typeof(Sparc.Blossom.Server.App)" render-mode="ServerPrerendered" />
+        <component type="typeof(Sparc.Blossom.App)" render-mode="ServerPrerendered" />
     </app>
 
     <script src="_framework/blazor.server.js"></script>
