--- a/Sparc.Blossom.Server/Pages/BlogList.scss
+++ b/Sparc.Blossom.Server/Pages/BlogList.scss
@@ -26,8 +26,8 @@
         font-size: 64px;
         font-family: 'NimbusSansExtd';
         line-height: 95%;
-        margin-top: 120px;
-        margin-bottom: 8px;
+        margin: 120px auto 8px auto;
+        width: 629px;
     }
 
     h2 {
@@ -35,9 +35,6 @@
         line-height: 26px;
         font-family: 'NimbusSansExtd';
         margin-bottom: 113px;
-    }
-
-    .header {
     }
 
     .blog-post-list {
@@ -49,47 +46,6 @@
         flex-wrap: wrap;
         position: relative;
         z-index: 2;
-
-        .blog-post {
-            width: 413px;
-            height: 445px;
-            margin: 10.5px;
-            display: flex;
-            flex-direction: column;
-
-            img {
-                width: 100%;
-                height: 277px;
-                border-radius: 20px;
-                object-fit: cover;
-                opacity: 1;
-            }
-
-            .empty-img {
-                height: 277px;
-            }
-
-            h3 {
-                margin: 7.5px;
-                font-family: 'NimbusSansExtd';
-                font-style: normal;
-                font-weight: 400;
-                font-size: 26px;
-                line-height: 31px;
-            }
-
-            p {
-                font-family: 'NimbusSans';
-                font-style: normal;
-                font-weight: 400;
-                font-size: 21px;
-                line-height: 25px;
-                margin: 7.5px;
-                overflow: hidden;
-                max-height: 145px;
-                height: 145px;
-            }
-        }
 
         .no-img {
             border: 1px solid white;
