--- a/Sparc.Blossom.Server/Shared/NavMenu.razor
+++ b/Sparc.Blossom.Server/Shared/NavMenu.razor
@@ -6,8 +6,8 @@
     </div>
     <div class="links-wrapper">
         <div class="links">
-            @*<a href="/Guide">Guide</a>
-            <a href="/Contact">Contact</a>*@
+            @*<a href="/Guide">Guide</a>*@
+            <a href="/blogs">Blog</a>
         </div>
         <div class="join">
             @*<button class="join-community">Join Blossom</button>*@
