--- a/Sparc.Blossom.Server/Pages/_Host.cshtml
+++ b/Sparc.Blossom.Server/Pages/_Host.cshtml
@@ -47,5 +47,19 @@
         };
     </script>
 
+    <script>
+        //document.getElementById("project-wrapper").onmouseover = function() {
+        //    document.getElementByClassName("arrows-container").style.opacity = "1";
+        //}
+
+        document.getElementById("carousel-backward").onmouseover = function() {
+            document.getElementById("project-wrapper").style.animation = "scrollReverse 10s linear infinite !important";
+        }
+
+        document.getElementById("carousel-forward").onmouseover = function() {
+            document.getElementById("project-wrapper").style.animation = "scroll 10s linear infinite !important";
+        }
+    </script>
+
 </body>
 </html>
