--- a/Sparc.Blossom.Server/Shared/NavMenu.razor
+++ b/Sparc.Blossom.Server/Shared/NavMenu.razor
@@ -1,10 +1,11 @@
 ﻿@using Microsoft.AspNetCore.Components;
 
+<div class="nav--filter"></div>
 <nav>
     <div class="logo">
         <a href="/"><img src="/images/Blossom Color White.png" /></a>
     </div>
-    <div class="links-wrapper">
+    <div class="links--wrapper">
         <div class="links">
             @*<a href="/Guide">Guide</a>
             <a href="/Contact">Contact</a>*@
