--- a/Sparc.Blossom.Server/Shared/NavMenu.scss
+++ b/Sparc.Blossom.Server/Shared/NavMenu.scss
@@ -1,17 +1,33 @@
 ﻿@import "../App.Variables.scss";
 
+.nav--filter {
+    width: 100vw;
+    height: 64.41px;
+    padding: 0;
+    position: fixed;
+    bottom: 0;
+    backdrop-filter: blur(10px) brightness(120%);
+    opacity: 1;
+    z-index: 90;
+}
+
 nav {
     width: 100vw;
     margin: 0;
-    padding-top: 12px;
-    padding-bottom: 12px;
-    background: $background;
-    border-top: 1px solid $white;
+    padding: 12px 0;
     display: flex;
     justify-content: space-between;
+    background: $background;
+    opacity: 0.8;
+    border-top: 1px solid $white;
     position: fixed;
     bottom: 0;
     z-index: 100;
+
+    .nav--wrapper {
+        display: flex;
+        justify-content: space-between;
+    }
 
     .logo {
         img {
@@ -19,8 +35,8 @@ nav {
             width: 142px;
         }
     }
-    
-    .links-wrapper {
+
+    .links--wrapper {
         display: flex;
         margin: auto 0;
 
@@ -59,7 +75,7 @@ nav {
             }
         }
 
-        .links-wrapper {
+        .links--wrapper {
             display: flex;
             margin: auto 0;
 
