--- a/Sparc.Blossom.Server/Pages/Index.scss
+++ b/Sparc.Blossom.Server/Pages/Index.scss
@@ -291,6 +291,14 @@
                 gap: 24px;
                 animation: scroll 20s linear infinite;
 
+                &.backward {
+                    animation: scrollReverse 10s linear infinite;
+                }
+
+                &.forward {
+                    animation: scroll 10s linear infinite;
+                }
+
                 .github-card {
                     width: 413px;
                     height: 336px;
