--- a/Sparc.Blossom.Server/wwwroot/css/app.css
+++ b/Sparc.Blossom.Server/wwwroot/css/app.css
@@ -512,6 +512,12 @@ footer .footer--column .column-links a {
   gap: 24px;
   animation: scroll 20s linear infinite;
 }
+.landing--projects .project-carousel .project-wrapper.backward {
+  animation: scrollReverse 10s linear infinite;
+}
+.landing--projects .project-carousel .project-wrapper.forward {
+  animation: scroll 10s linear infinite;
+}
 .landing--projects .project-carousel .project-wrapper .github-card {
   width: 413px;
   height: 336px;
